--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "nanoid": "^2.1.11",
     "nodemon": "^2.0.4",
     "swagger-ui-express": "^4.1.4"
