Conectando con nuestro microservicio de Datos

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql": "^2.18.1",
     "nanoid": "^2.1.11",
     "nodemon": "^2.0.4",
+    "request": "^2.88.2",
     "swagger-ui-express": "^4.1.4"
   }
 }
